--- a/Build like a pro/E Portfolio 2/index.html
+++ b/Build like a pro/E Portfolio 2/index.html
@@ -29,7 +29,7 @@
           <img id="personal-logo" src="./assets/logo.svg" alt="" />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link click">
+          <li class="nav__link click" onclick="toggleModal()">  
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -39,7 +39,7 @@
 
           <li class="nav__link click">
             <a
-              href="#"
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
@@ -104,8 +104,11 @@
         </div>
       </header>
       <button class="mail__btn click" onclick="toggleModal()">
-        <i class="fa-solid fa-envelope"></i>
-      </button>
+        <a href="#">
+          
+          <i class="fa-solid fa-envelope"></i>
+        </button>
+      </a>
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
@@ -272,29 +275,29 @@
             <img class="footer__logo--img" src="./assets/logo.svg" alt="">
         </figure>
         <div class="footer__social--list">
-            <a href="#" class=
+            <a href="https://github.com/Katkins373" target="_blank" class=
             "footer__social--link
             link__hover-effect
             link__hover-effect--white
             "> 
         GitHub
             </a>
-            <a href="#" class=
-            "footer__social--link
+            <a href="#" target="_blank" class="
+            footer__social--link
             link__hover-effect
             link__hover-effect--white
             "> 
         LinkedIn
             </a>
-            <a href="#" class=
-            "footer__social--link
+            <a href="#" onclick="toggleModal()"  class= "
+            footer__social--link
             link__hover-effect
             link__hover-effect--white
             "> 
         Contact
             </a>
-            <a href="#" class=
-            "footer__social--link
+            <a href="./assets/David Bragg Resume.pdf" target="_blank" class="
+            footer__social--link
             link__hover-effect
             link__hover-effect--white
             "> 
